파일 커스텀 다운로드 개선

--- a/src/res/json/language/language.json
+++ b/src/res/json/language/language.json
@@ -630,15 +630,15 @@
   },
   "s147": {
     "kr": "휴대폰 번호",
-    "en": null
+    "en": "Mobile"
   },
   "s148": {
     "kr": "숫자만 입력해주세요.",
-    "en": null
+    "en": "only numbers"
   },
   "s149": {
     "kr": "인증번호 전송",
-    "en": null
+    "en": "verify"
   },
   "s150": {
     "kr": "특급 할인👍 각종 혜택을 바로 받아보세요 (선택)",
@@ -650,42 +650,42 @@
   },
   "s152": {
     "kr": "인증 번호",
-    "en": null
+    "en": "verification number"
   },
   "s153": {
     "kr": "인증 번호 6자리",
-    "en": null
+    "en": "verification number (6 digits)"
   },
   "s154": {
     "kr": "인증 완료",
-    "en": null
+    "en": "verified"
   },
   "s155": {
     "kr": "휴대폰 번호를 입력해주세요.",
-    "en": null
+    "en": "Mobile"
   },
   "s156": {
     "kr": "휴대폰 인증을 해주세요.",
-    "en": null
+    "en": "Verify your mobile phone number"
   },
   "s157": {
     "kr": "인증",
-    "en": null
+    "en": "verify"
   },
   "s158": {
     "kr": "다시 만나 반가워요!",
-    "en": null
+    "en": "Welcome back!"
   },
   "s159": {
     "kr": "휴면 계정 전환 처리를 위해 본인의 휴대폰 번호를 인증해주세요.",
-    "en": null
+    "en": "Verify your mobile"
   },
   "s160": {
     "kr": "크티 다시 시작하기",
-    "en": null
+    "en": "Back to crowdticket!"
   },
   "s161": {
-    "kr": "휴대폰 번호 인증은 최초 결제 시에만 해당됩니다.",
-    "en": null
+    "kr": "휴대폰 번호 인증은 처음 결제할 때만 요청드려요.",
+    "en": "only needed when first try on payment"
   }
 }
